rns-lang/tests/snapshots/diagnostic/err-lexer-strings-unterminated_string_after_escape_with_newline.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
"String with backslash escape followed by newline \
.end
----- STDOUT -----

----- STDERR -----
Error: unterminated string literal
   ╭─[ test_data/diagnostic/err/lexer/strings/unterminated_string_after_escape_with_newline.ja:2:1 ]
   │
 2 │ "String with backslash escape followed by newline \
   │ ┬  
   │ ╰── this string literal is not terminated
   │ 
   │ Note: String literal is not terminated before the end of the line or file.
───╯
