rns-lang/tests/snapshots/diagnostic/err-parser-class_directive-header-name-dot_class_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public .class
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: cannot use directive '.class' as a class name
   ╭─[ test_data/diagnostic/err/parser/class_directive/header/name/dot_class_as_class_name.ja:1:15 ]
   │
 1 │ .class public .class
   │               ───┬──  
   │                  ╰──── directives cannot be used as names
   │ 
   │ Note: Directives are reserved keywords. If you meant to start a new directive, do so on a new line.
───╯
