rns-lang/tests/snapshots/diagnostic/err-parser-class_directive-header-name-dot_code_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public  .code
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: cannot use directive '.code' as a class name
   ╭─[ test_data/diagnostic/err/parser/class_directive/header/name/dot_code_as_class_name.ja:1:16 ]
   │
 1 │ .class public  .code
   │                ──┬──  
   │                  ╰──── directives cannot be used as names
   │ 
   │ Note: Directives are reserved keywords. If you meant to start a new directive, do so on a new line.
───╯
