rns-lang/tests/snapshots/diagnostic/err-parser-class_directive-header-name-dot_end_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class .end method

----- STDOUT -----

----- STDERR -----
Error: cannot use directive '.end' as a class name
   ╭─[ test_data/diagnostic/err/parser/class_directive/header/name/dot_end_as_class_name.ja:1:8 ]
   │
 1 │ .class .end method
   │        ──┬─  
   │          ╰─── directives cannot be used as names
   │ 
   │ Note: Directives are reserved keywords. If you meant to start a new directive, do so on a new line.
───╯
